--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+ex05/.ipynb_checkpoints
 
-ex01/.ipynb_checkpoints/nearest-neighbour-checkpoint.ipynb
-ex01/.ipynb_checkpoints/monte-carlo-checkpoint.ipynb
+ex02/.ipynb_checkpoints
+
+ex01/.ipynb_checkpoints
+
 *.pdf
 *.zip
